--- a/.github/workflows/label.yml
+++ b/.github/workflows/label.yml
@@ -12,9 +12,9 @@ jobs:
        matrix :
         node-version: [18.x]
      steps:
-     - uses: action/checkout@v4
+     - uses: actions/checkout@v3
      - name: Use Node.js ${{ matrix.node-version }}
-       uses: action/setup-node@v3
+       uses: actions/setup-node@v3
        with:
            node-version: ${{ matrix.node-version }}
            cache: 'npm'
